<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.sunshine.com.example.android.championslot.Toss">


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/toss21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:text="@string/Toss2"
            android:textColor="@color/white"
            android:background="@drawable/small_shape"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BlackandWhite"
            android:id="@+id/black_white"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/toss31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:text="@string/Toss3"
            android:textColor="@color/white"
            android:background="@drawable/small_shape"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ScissorStonePaper"
            android:id="@+id/Scissors_Stone_Paper"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</ScrollView>
