<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="app.sunshine.com.example.android.fitnesseveryday.MainActivity">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="130dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">



            <!--  Name Label -->
            <!--<android.support.design.widget.TextInputLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="8dp"-->
                <!--android:layout_marginBottom="8dp">-->
                <!--<EditText android:id="@+id/no.of_player_et"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="number"-->
                    <!--android:hint="No.of.Players" />-->
            <!--</android.support.design.widget.TextInputLayout>-->

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/Add_player_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/AddPlayers" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="end"
                android:text="@string/Add"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"/>
            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/no_of_grouped_etd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/No.of.Groups"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/Submit"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Take_decision"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/toss"

                />
        </LinearLayout>


    </ScrollView>


    <android.support.design.widget.AppBarLayout
        android:id="@+id/toolbar_container"
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:gravity="bottom">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_gravity="bottom"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@color/colorPrimary"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text ="@string/ChampionsLot"
                    android:textSize="30sp"
                    android:textColor="@color/white_greyish"
                    android:fontFamily="casual"
                    android:textAllCaps="true"
                    android:textStyle="bold|italic"
                     />


            </LinearLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>
