<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="app.sunshine.com.example.android.championslot.Groupes">


    <LinearLayout


        android:id="@+id/content_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/G1Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Group1"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Group1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/G2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Group2"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Group2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView

                    android:id="@+id/G3Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Group3"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Group3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"></android.support.v7.widget.RecyclerView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/G4Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Group4"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/Group4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp">
                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
